# kdbsplit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  deny.toml  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
crates/bench/: Cargo.toml
crates/bench/src/: main.rs  virtual_keyboard.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  mapping.rs  profile.rs  slot.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: evdev.rs  ipc.rs  main.rs  runtime.rs  uinput.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  ipc_client.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: protocol.rs  types.rs
docs/: architecture.md  mapping.md  protocol.md
packaging/desktop/: dev.kbdsplit.KbdSplit.desktop
packaging/systemd/: kbdsplitd.service
packaging/udev/: 70-kbdsplit.rules
