[package]
name = "kbdsplit-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
kbdsplit-core = { path = "../core" }
kbdsplit-shared = { path = "../shared" }
libc.workspace = true
