[package]
name = "kbdsplit-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "kbdsplitd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
kbdsplit-core = { path = "../core" }
kbdsplit-shared = { path = "../shared" }
libc.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
