[package]
name = "kbdsplit-daemon"
version = "0.2.0"
description = "KbdSplit privileged input daemon — reads evdev, emits uinput gamepads"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "kbdsplitd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
kbdsplit-core = { path = "../core" }
kbdsplit-shared = { path = "../shared" }
libc.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
