[package]
name = "kbdsplit-gui"
version = "0.1.0"
description = "KbdSplit egui frontend — assign keyboards, edit bindings, manage profiles"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "kbdsplit-gui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
kbdsplit-core = { path = "../core" }
kbdsplit-shared = { path = "../shared" }
