[package]
name = "kbdsplit-shared"
version = "0.1.0"
description = "KbdSplit shared types, IPC protocol, and serialization"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
